parse.output
Terminals unused in grammar

   TTO
   TSQUOTE
   IS


State 24 conflicts: 3 shift/reduce
State 33 conflicts: 1 shift/reduce
State 36 conflicts: 2 shift/reduce
State 40 conflicts: 7 shift/reduce
State 78 conflicts: 12 shift/reduce
State 84 conflicts: 7 shift/reduce
State 85 conflicts: 7 shift/reduce
State 86 conflicts: 7 shift/reduce
State 87 conflicts: 7 shift/reduce
State 88 conflicts: 7 shift/reduce
State 89 conflicts: 12 shift/reduce
State 90 conflicts: 12 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | stmts

    3 stmts: stmt
    4      | stmts stmt

    5 stmt: var_decl
    6     | var_decl_deduce
    7     | func_decl
    8     | class_decl
    9     | conditional
   10     | return
   11     | while
   12     | array_add_element
   13     | expr

   14 block: INDENT stmts UNINDENT
   15      | INDENT UNINDENT

   16 conditional: TIF expr block TELSE block
   17            | TIF expr block

   18 while: TWHILE expr block TELSE block
   19      | TWHILE expr block

   20 var_decl: ident ident
   21         | ident ident TEQUAL expr

   22 var_decl_deduce: TVAR ident TEQUAL expr

   23 func_decl: TDEF ident TLPAREN func_decl_args TRPAREN TCOLON ident block
   24          | TDEF ident TLPAREN func_decl_args TRPAREN block

   25 func_decl_args: %empty
   26               | var_decl
   27               | func_decl_args TCOMMA var_decl

   28 class_decl: TDEF ident block

   29 ident: TIDENTIFIER
   30      | TIDENTIFIER TDOT TIDENTIFIER

   31 literals: TINTEGER
   32         | TDOUBLE
   33         | TSTR
   34         | TBOOL

   35 return: TRETURN expr
   36       | TRETURN_SIMPLE

   37 expr: ident TEQUAL expr
   38     | ident TLPAREN call_args TRPAREN
   39     | ident
   40     | literals
   41     | boolean_expr
   42     | binop_expr
   43     | unaryop_expr
   44     | TLPAREN expr TRPAREN
   45     | range_expr
   46     | array_expr
   47     | array_access

   48 binop_expr: expr TAND expr
   49           | expr TOR expr
   50           | expr TPLUS expr
   51           | expr TMINUS expr
   52           | expr TMUL expr
   53           | expr TDIV expr

   54 unaryop_expr: TNOT expr

   55 boolean_expr: expr comparison expr

   56 call_args: %empty
   57          | expr
   58          | call_args TCOMMA expr

   59 comparison: TCEQ
   60           | TCNE
   61           | TCLT
   62           | TCLE
   63           | TCGT
   64           | TCGE

   65 array_elemets_expr: %empty
   66                   | expr
   67                   | array_elemets_expr TCOMMA expr

   68 array_expr: TLBRACKET array_elemets_expr TRBRACKET

   69 array_add_element: ident TLTLT expr

   70 array_access: ident TLBRACKET TINTEGER TRBRACKET
   71             | array_access TLBRACKET TINTEGER TRBRACKET

   72 range_expr: TLBRACKET expr TRANGE expr TRBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
TIDENTIFIER (258) 29 30
TINTEGER (259) 31 70 71
TDOUBLE (260) 32
TSTR (261) 33
TBOOL (262) 34
TCEQ (263) 59
TCNE (264) 60
TCLT (265) 61
TCLE (266) 62
TCGT (267) 63
TCGE (268) 64
TEQUAL (269) 21 22 37
TLTLT (270) 69
TCOMMA (271) 27 58 67
TDOT (272) 30
TCOLON (273) 23
TRANGE (274) 72
TLPAREN (275) 23 24 38 44
TRPAREN (276) 23 24 38 44
TLBRACKET (277) 68 70 71 72
TRBRACKET (278) 68 70 71 72
TPLUS (279) 50
TMINUS (280) 51
TMUL (281) 52
TDIV (282) 53
TNOT (283) 54
TAND (284) 48
TOR (285) 49
TIF (286) 16 17
TELSE (287) 16 18
TWHILE (288) 18 19
TTO (289)
TSQUOTE (290)
TDEF (291) 23 24 28
TRETURN (292) 35
TRETURN_SIMPLE (293) 36
TVAR (294) 22
IS (295)
INDENT (296) 14 15
UNINDENT (297) 14 15


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1 2, on right: 0
stmts (45)
    on left: 3 4, on right: 2 4 14
stmt (46)
    on left: 5 6 7 8 9 10 11 12 13, on right: 3 4
block (47)
    on left: 14 15, on right: 16 17 18 19 23 24 28
conditional (48)
    on left: 16 17, on right: 9
while (49)
    on left: 18 19, on right: 11
var_decl (50)
    on left: 20 21, on right: 5 26 27
var_decl_deduce (51)
    on left: 22, on right: 6
func_decl (52)
    on left: 23 24, on right: 7
func_decl_args (53)
    on left: 25 26 27, on right: 23 24 27
class_decl (54)
    on left: 28, on right: 8
ident (55)
    on left: 29 30, on right: 20 21 22 23 24 28 37 38 39 69 70
literals (56)
    on left: 31 32 33 34, on right: 40
return (57)
    on left: 35 36, on right: 10
expr (58)
    on left: 37 38 39 40 41 42 43 44 45 46 47, on right: 13 16 17 18
    19 21 22 35 37 44 48 49 50 51 52 53 54 55 57 58 66 67 69 72
binop_expr (59)
    on left: 48 49 50 51 52 53, on right: 42
unaryop_expr (60)
    on left: 54, on right: 43
boolean_expr (61)
    on left: 55, on right: 41
call_args (62)
    on left: 56 57 58, on right: 38 58
comparison (63)
    on left: 59 60 61 62 63 64, on right: 55
array_elemets_expr (64)
    on left: 65 66 67, on right: 67 68
array_expr (65)
    on left: 68, on right: 46
array_add_element (66)
    on left: 69, on right: 12
array_access (67)
    on left: 70 71, on right: 47 71
range_expr (68)
    on left: 72, on right: 45


State 0

    0 $accept: . program $end

    TIDENTIFIER     shift, and go to state 1
    TINTEGER        shift, and go to state 2
    TDOUBLE         shift, and go to state 3
    TSTR            shift, and go to state 4
    TBOOL           shift, and go to state 5
    TLPAREN         shift, and go to state 6
    TLBRACKET       shift, and go to state 7
    TNOT            shift, and go to state 8
    TIF             shift, and go to state 9
    TWHILE          shift, and go to state 10
    TDEF            shift, and go to state 11
    TRETURN         shift, and go to state 12
    TRETURN_SIMPLE  shift, and go to state 13
    TVAR            shift, and go to state 14

    $default  reduce using rule 1 (program)

    program            go to state 15
    stmts              go to state 16
    stmt               go to state 17
    conditional        go to state 18
    while              go to state 19
    var_decl           go to state 20
    var_decl_deduce    go to state 21
    func_decl          go to state 22
    class_decl         go to state 23
    ident              go to state 24
    literals           go to state 25
    return             go to state 26
    expr               go to state 27
    binop_expr         go to state 28
    unaryop_expr       go to state 29
    boolean_expr       go to state 30
    array_expr         go to state 31
    array_add_element  go to state 32
    array_access       go to state 33
    range_expr         go to state 34


State 1

   29 ident: TIDENTIFIER .
   30      | TIDENTIFIER . TDOT TIDENTIFIER

    TDOT  shift, and go to state 35

    $default  reduce using rule 29 (ident)


State 2

   31 literals: TINTEGER .

    $default  reduce using rule 31 (literals)


State 3

   32 literals: TDOUBLE .

    $default  reduce using rule 32 (literals)


State 4

   33 literals: TSTR .

    $default  reduce using rule 33 (literals)


State 5

   34 literals: TBOOL .

    $default  reduce using rule 34 (literals)


State 6

   44 expr: TLPAREN . expr TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 37
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 7

   68 array_expr: TLBRACKET . array_elemets_expr TRBRACKET
   72 range_expr: TLBRACKET . expr TRANGE expr TRBRACKET

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    $default  reduce using rule 65 (array_elemets_expr)

    ident               go to state 36
    literals            go to state 25
    expr                go to state 38
    binop_expr          go to state 28
    unaryop_expr        go to state 29
    boolean_expr        go to state 30
    array_elemets_expr  go to state 39
    array_expr          go to state 31
    array_access        go to state 33
    range_expr          go to state 34


State 8

   54 unaryop_expr: TNOT . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 40
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 9

   16 conditional: TIF . expr block TELSE block
   17            | TIF . expr block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 41
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 10

   18 while: TWHILE . expr block TELSE block
   19      | TWHILE . expr block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 42
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 11

   23 func_decl: TDEF . ident TLPAREN func_decl_args TRPAREN TCOLON ident block
   24          | TDEF . ident TLPAREN func_decl_args TRPAREN block
   28 class_decl: TDEF . ident block

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 43


State 12

   35 return: TRETURN . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 44
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 13

   36 return: TRETURN_SIMPLE .

    $default  reduce using rule 36 (return)


State 14

   22 var_decl_deduce: TVAR . ident TEQUAL expr

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 45


State 15

    0 $accept: program . $end

    $end  shift, and go to state 46


State 16

    2 program: stmts .
    4 stmts: stmts . stmt

    TIDENTIFIER     shift, and go to state 1
    TINTEGER        shift, and go to state 2
    TDOUBLE         shift, and go to state 3
    TSTR            shift, and go to state 4
    TBOOL           shift, and go to state 5
    TLPAREN         shift, and go to state 6
    TLBRACKET       shift, and go to state 7
    TNOT            shift, and go to state 8
    TIF             shift, and go to state 9
    TWHILE          shift, and go to state 10
    TDEF            shift, and go to state 11
    TRETURN         shift, and go to state 12
    TRETURN_SIMPLE  shift, and go to state 13
    TVAR            shift, and go to state 14

    $default  reduce using rule 2 (program)

    stmt               go to state 47
    conditional        go to state 18
    while              go to state 19
    var_decl           go to state 20
    var_decl_deduce    go to state 21
    func_decl          go to state 22
    class_decl         go to state 23
    ident              go to state 24
    literals           go to state 25
    return             go to state 26
    expr               go to state 27
    binop_expr         go to state 28
    unaryop_expr       go to state 29
    boolean_expr       go to state 30
    array_expr         go to state 31
    array_add_element  go to state 32
    array_access       go to state 33
    range_expr         go to state 34


State 17

    3 stmts: stmt .

    $default  reduce using rule 3 (stmts)


State 18

    9 stmt: conditional .

    $default  reduce using rule 9 (stmt)


State 19

   11 stmt: while .

    $default  reduce using rule 11 (stmt)


State 20

    5 stmt: var_decl .

    $default  reduce using rule 5 (stmt)


State 21

    6 stmt: var_decl_deduce .

    $default  reduce using rule 6 (stmt)


State 22

    7 stmt: func_decl .

    $default  reduce using rule 7 (stmt)


State 23

    8 stmt: class_decl .

    $default  reduce using rule 8 (stmt)


State 24

   20 var_decl: ident . ident
   21         | ident . ident TEQUAL expr
   37 expr: ident . TEQUAL expr
   38     | ident . TLPAREN call_args TRPAREN
   39     | ident .
   69 array_add_element: ident . TLTLT expr
   70 array_access: ident . TLBRACKET TINTEGER TRBRACKET

    TIDENTIFIER  shift, and go to state 1
    TEQUAL       shift, and go to state 48
    TLTLT        shift, and go to state 49
    TLPAREN      shift, and go to state 50
    TLBRACKET    shift, and go to state 51

    TIDENTIFIER  [reduce using rule 39 (expr)]
    TLPAREN      [reduce using rule 39 (expr)]
    TLBRACKET    [reduce using rule 39 (expr)]
    $default     reduce using rule 39 (expr)

    ident  go to state 52


State 25

   40 expr: literals .

    $default  reduce using rule 40 (expr)


State 26

   10 stmt: return .

    $default  reduce using rule 10 (stmt)


State 27

   13 stmt: expr .
   48 binop_expr: expr . TAND expr
   49           | expr . TOR expr
   50           | expr . TPLUS expr
   51           | expr . TMINUS expr
   52           | expr . TMUL expr
   53           | expr . TDIV expr
   55 boolean_expr: expr . comparison expr

    TCEQ    shift, and go to state 53
    TCNE    shift, and go to state 54
    TCLT    shift, and go to state 55
    TCLE    shift, and go to state 56
    TCGT    shift, and go to state 57
    TCGE    shift, and go to state 58
    TPLUS   shift, and go to state 59
    TMINUS  shift, and go to state 60
    TMUL    shift, and go to state 61
    TDIV    shift, and go to state 62
    TAND    shift, and go to state 63
    TOR     shift, and go to state 64

    $default  reduce using rule 13 (stmt)

    comparison  go to state 65


State 28

   42 expr: binop_expr .

    $default  reduce using rule 42 (expr)


State 29

   43 expr: unaryop_expr .

    $default  reduce using rule 43 (expr)


State 30

   41 expr: boolean_expr .

    $default  reduce using rule 41 (expr)


State 31

   46 expr: array_expr .

    $default  reduce using rule 46 (expr)


State 32

   12 stmt: array_add_element .

    $default  reduce using rule 12 (stmt)


State 33

   47 expr: array_access .
   71 array_access: array_access . TLBRACKET TINTEGER TRBRACKET

    TLBRACKET  shift, and go to state 66

    TLBRACKET  [reduce using rule 47 (expr)]
    $default   reduce using rule 47 (expr)


State 34

   45 expr: range_expr .

    $default  reduce using rule 45 (expr)


State 35

   30 ident: TIDENTIFIER TDOT . TIDENTIFIER

    TIDENTIFIER  shift, and go to state 67


State 36

   37 expr: ident . TEQUAL expr
   38     | ident . TLPAREN call_args TRPAREN
   39     | ident .
   70 array_access: ident . TLBRACKET TINTEGER TRBRACKET

    TEQUAL     shift, and go to state 48
    TLPAREN    shift, and go to state 50
    TLBRACKET  shift, and go to state 51

    TLPAREN    [reduce using rule 39 (expr)]
    TLBRACKET  [reduce using rule 39 (expr)]
    $default   reduce using rule 39 (expr)


State 37

   44 expr: TLPAREN expr . TRPAREN
   48 binop_expr: expr . TAND expr
   49           | expr . TOR expr
   50           | expr . TPLUS expr
   51           | expr . TMINUS expr
   52           | expr . TMUL expr
   53           | expr . TDIV expr
   55 boolean_expr: expr . comparison expr

    TCEQ     shift, and go to state 53
    TCNE     shift, and go to state 54
    TCLT     shift, and go to state 55
    TCLE     shift, and go to state 56
    TCGT     shift, and go to state 57
    TCGE     shift, and go to state 58
    TRPAREN  shift, and go to state 68
    TPLUS    shift, and go to state 59
    TMINUS   shift, and go to state 60
    TMUL     shift, and go to state 61
    TDIV     shift, and go to state 62
    TAND     shift, and go to state 63
    TOR      shift, and go to state 64

    comparison  go to state 65


State 38

   48 binop_expr: expr . TAND expr
   49           | expr . TOR expr
   50           | expr . TPLUS expr
   51           | expr . TMINUS expr
   52           | expr . TMUL expr
   53           | expr . TDIV expr
   55 boolean_expr: expr . comparison expr
   66 array_elemets_expr: expr .
   72 range_expr: TLBRACKET expr . TRANGE expr TRBRACKET

    TCEQ    shift, and go to state 53
    TCNE    shift, and go to state 54
    TCLT    shift, and go to state 55
    TCLE    shift, and go to state 56
    TCGT    shift, and go to state 57
    TCGE    shift, and go to state 58
    TRANGE  shift, and go to state 69
    TPLUS   shift, and go to state 59
    TMINUS  shift, and go to state 60
    TMUL    shift, and go to state 61
    TDIV    shift, and go to state 62
    TAND    shift, and go to state 63
    TOR     shift, and go to state 64

    $default  reduce using rule 66 (array_elemets_expr)

    comparison  go to state 65


State 39

   67 array_elemets_expr: array_elemets_expr . TCOMMA expr
   68 array_expr: TLBRACKET array_elemets_expr . TRBRACKET

    TCOMMA     shift, and go to state 70
    TRBRACKET  shift, and go to state 71


State 40

   48 binop_expr: expr . TAND expr
   49           | expr . TOR expr
   50           | expr . TPLUS expr
   51           | expr . TMINUS expr
   52           | expr . TMUL expr
   53           | expr . TDIV expr
   54 unaryop_expr: TNOT expr .
   55 boolean_expr: expr . comparison expr

    TCEQ  shift, and go to state 53
    TCNE  shift, and go to state 54
    TCLT  shift, and go to state 55
    TCLE  shift, and go to state 56
    TCGT  shift, and go to state 57
    TCGE  shift, and go to state 58
    TOR   shift, and go to state 64

    TCEQ      [reduce using rule 54 (unaryop_expr)]
    TCNE      [reduce using rule 54 (unaryop_expr)]
    TCLT      [reduce using rule 54 (unaryop_expr)]
    TCLE      [reduce using rule 54 (unaryop_expr)]
    TCGT      [reduce using rule 54 (unaryop_expr)]
    TCGE      [reduce using rule 54 (unaryop_expr)]
    TOR       [reduce using rule 54 (unaryop_expr)]
    $default  reduce using rule 54 (unaryop_expr)

    comparison  go to state 65


State 41

   16 conditional: TIF expr . block TELSE block
   17            | TIF expr . block
   48 binop_expr: expr . TAND expr
   49           | expr . TOR expr
   50           | expr . TPLUS expr
   51           | expr . TMINUS expr
   52           | expr . TMUL expr
   53           | expr . TDIV expr
   55 boolean_expr: expr . comparison expr

    TCEQ    shift, and go to state 53
    TCNE    shift, and go to state 54
    TCLT    shift, and go to state 55
    TCLE    shift, and go to state 56
    TCGT    shift, and go to state 57
    TCGE    shift, and go to state 58
    TPLUS   shift, and go to state 59
    TMINUS  shift, and go to state 60
    TMUL    shift, and go to state 61
    TDIV    shift, and go to state 62
    TAND    shift, and go to state 63
    TOR     shift, and go to state 64
    INDENT  shift, and go to state 72

    block       go to state 73
    comparison  go to state 65


State 42

   18 while: TWHILE expr . block TELSE block
   19      | TWHILE expr . block
   48 binop_expr: expr . TAND expr
   49           | expr . TOR expr
   50           | expr . TPLUS expr
   51           | expr . TMINUS expr
   52           | expr . TMUL expr
   53           | expr . TDIV expr
   55 boolean_expr: expr . comparison expr

    TCEQ    shift, and go to state 53
    TCNE    shift, and go to state 54
    TCLT    shift, and go to state 55
    TCLE    shift, and go to state 56
    TCGT    shift, and go to state 57
    TCGE    shift, and go to state 58
    TPLUS   shift, and go to state 59
    TMINUS  shift, and go to state 60
    TMUL    shift, and go to state 61
    TDIV    shift, and go to state 62
    TAND    shift, and go to state 63
    TOR     shift, and go to state 64
    INDENT  shift, and go to state 72

    block       go to state 74
    comparison  go to state 65


State 43

   23 func_decl: TDEF ident . TLPAREN func_decl_args TRPAREN TCOLON ident block
   24          | TDEF ident . TLPAREN func_decl_args TRPAREN block
   28 class_decl: TDEF ident . block

    TLPAREN  shift, and go to state 75
    INDENT   shift, and go to state 72

    block  go to state 76


State 44

   35 return: TRETURN expr .
   48 binop_expr: expr . TAND expr
   49           | expr . TOR expr
   50           | expr . TPLUS expr
   51           | expr . TMINUS expr
   52           | expr . TMUL expr
   53           | expr . TDIV expr
   55 boolean_expr: expr . comparison expr

    TCEQ    shift, and go to state 53
    TCNE    shift, and go to state 54
    TCLT    shift, and go to state 55
    TCLE    shift, and go to state 56
    TCGT    shift, and go to state 57
    TCGE    shift, and go to state 58
    TPLUS   shift, and go to state 59
    TMINUS  shift, and go to state 60
    TMUL    shift, and go to state 61
    TDIV    shift, and go to state 62
    TAND    shift, and go to state 63
    TOR     shift, and go to state 64

    $default  reduce using rule 35 (return)

    comparison  go to state 65


State 45

   22 var_decl_deduce: TVAR ident . TEQUAL expr

    TEQUAL  shift, and go to state 77


State 46

    0 $accept: program $end .

    $default  accept


State 47

    4 stmts: stmts stmt .

    $default  reduce using rule 4 (stmts)


State 48

   37 expr: ident TEQUAL . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 78
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 49

   69 array_add_element: ident TLTLT . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 79
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 50

   38 expr: ident TLPAREN . call_args TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    $default  reduce using rule 56 (call_args)

    ident         go to state 36
    literals      go to state 25
    expr          go to state 80
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    call_args     go to state 81
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 51

   70 array_access: ident TLBRACKET . TINTEGER TRBRACKET

    TINTEGER  shift, and go to state 82


State 52

   20 var_decl: ident ident .
   21         | ident ident . TEQUAL expr

    TEQUAL  shift, and go to state 83

    $default  reduce using rule 20 (var_decl)


State 53

   59 comparison: TCEQ .

    $default  reduce using rule 59 (comparison)


State 54

   60 comparison: TCNE .

    $default  reduce using rule 60 (comparison)


State 55

   61 comparison: TCLT .

    $default  reduce using rule 61 (comparison)


State 56

   62 comparison: TCLE .

    $default  reduce using rule 62 (comparison)


State 57

   63 comparison: TCGT .

    $default  reduce using rule 63 (comparison)


State 58

   64 comparison: TCGE .

    $default  reduce using rule 64 (comparison)


State 59

   50 binop_expr: expr TPLUS . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 84
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 60

   51 binop_expr: expr TMINUS . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 85
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 61

   52 binop_expr: expr TMUL . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 86
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 62

   53 binop_expr: expr TDIV . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 87
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 63

   48 binop_expr: expr TAND . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 88
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 64

   49 binop_expr: expr TOR . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 89
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 65

   55 boolean_expr: expr comparison . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8
